# domi-multisig

./: .gitignore
program/: Cargo.toml
program/src/: bindings.rs  client.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  wasm.rs
program/tests/: functional.rs  token.rs
